# Making-Free-Joins-Scalable

./: .gitignore  CMakeLists.txt  Makefile  README.md  all_plans.sh  bm_indexes.sh
benchmarks/join-order-benchmark/plans/: preprocess_plans.py
benchmarks/join-order-benchmark/plans/original/: 10a.json  10b.json  10c.json  11a.json  11b.json  11c.json  11d.json  12a.json  12b.json  12c.json  13a.json  13b.json  13c.json  13d.json  14a.json  14b.json  14c.json  15a.json  15b.json  15c.json  15d.json  16a.json  16b.json  16c.json  16d.json  17a.json  17b.json  17c.json  17d.json  17e.json  17f.json  18a.json  18b.json  18c.json  19a.json  19b.json  19c.json  19d.json  1a.json  1b.json  (+73 more)
benchmarks/join-order-benchmark/plans/preprocessed/: 10a.json  11b.json  11c.json  12a.json  12b.json  13a.json  13c.json  15b.json  15d.json  16c.json  17d.json  18a.json  19a.json  1c.json  21b.json  22a.json  23c.json  24a.json  26b.json  27b.json  28b.json  29b.json  2d.json  32a.json  33a.json  3b.json  4b.json  5b.json  6a.json  7a.json  7c.json  8a.json  8b.json  (+2 more)
benchmarks/join-order-benchmark/plans/preprocessed-mini/: 8c.json
figures/: adjacency_matrix.py  agm_bound_solver.py  order.txt  order_default.txt  order_smart.txt  order_smart_original.txt  plot_adj_matrix.py  plot_bm_idxs_subplots.py  plot_chunked_list.py  plot_diag.py  plot_diag_multiple.py  plot_fj_space.py  plot_fjp.py  plot_fjp_barchart.py  plot_fjp_boxplot.py  plot_fjp_pyplot.py  plot_ght_heights.py  plot_indexes.py  plot_indexes_cache_misses.py  plot_indexes_runtime.py  plot_llc_misses.py  plotly_colors.py
includes/: CMakeLists.txt
includes/data_loader/: database.h  duckdb_manager.h  relation.h
includes/execution_engine/: chunked_list.h  chunked_list_builder.h  engine.h  ght_builder.h  ght_intersector.h
includes/execution_engine/operators/: physical_free_join.h  physical_free_join_direct.h  physical_free_join_full.h  physical_free_join_fullmat.h  physical_free_join_smart.h  physical_operator.h  physical_projection.h  physical_scan.h  physical_scan_full.h
includes/libduckdb-src/: duckdb.hpp
includes/nlohmann/: json.hpp
includes/query_optimizer/: free_join_plan.h  hybrid_plan.h  optimizer.h  query.h  query_handler.h
includes/query_optimizer/operators/: logical_filter.h  logical_get.h  logical_join.h  logical_operator.h  logical_operator_tree.h  logical_projection.h
includes/utils/: PerfEvent.hpp  custom_clock.h  custom_hash.h  utils.h
logs/: 10a.txt  9d.txt  9d_new.txt  benchmark_indexes_02092023_184400.txt  benchmark_indexes_31082023_211500.txt  benchmark_indexes_31082023_213000.txt  benchmark_indexes_31082023_223700.txt  benchmark_indexes_31082023_223800.txt  benchmark_indexes_31082023_223900.txt  benchmark_indexes_31082023_224000.txt  benchmark_indexes_31082023_224100.txt  bm_indexes_11092023_120000.txt  cll_vs_9d.txt  cll_vs_9d_old.txt  fj_plans.txt  fj_plans2.txt  fj_plans_3.txt  fjp_active_stats_10092023_203400.txt  fjp_canonical_stats_10092023_203700.txt  fjp_comparison.txt  fjp_fullyactive_stats_07092023_160700.txt  fjp_job_robin_false_largest_left_11092023_003900.txt  fjp_job_robin_true_default_14092023_185400.txt  fjp_job_robin_true_default_original_18092023_130000.txt  fjp_job_robin_true_largest_left_11092023_205700.txt  fjp_job_robin_true_popular_12092023_170800.txt  fjp_job_robin_true_smart_12092023_134200.txt  fjp_job_robin_true_smart_original_18092023_144800.txt  fjp_job_robin_true_sorted_12092023_155300.txt  job_15082023_190300  job_15082023_190800  job_16082023_114400.txt  job_16082023_114400_filtered.txt
src/: CMakeLists.txt
src/data_loader/: database.cpp  duckdb_manager.cpp  relation.cpp
src/execution_engine/: chunked_list.cpp  chunked_list_builder.cpp  engine.cpp  ght_builder.cpp  ght_intersector.cpp
src/query_optimizer/: free_join_plan.cpp  hybrid_plan.cpp  logical_operator_tree.cpp  optimizer.cpp  query.cpp  query_handler.cpp
